The basic/ module contains a number of unpleasant explicit prototypes, eg. git grep -5 implGetWeek that should be grouped into an internal header in basic/source/inc (I expect) - if a suitable one doesn't exist, then we should add a new one :-) Thanks !
Deleted "Easyhack" from summary.
Created attachment 68047 [details] Proposed patch Is the attached what you are after? Do I need to include a file in the header for sal_Int? It seems to compile as is. Should the inline function implGetDayMonthYear be moved too?
Yes - exactly what I'm looking for :-) nice work; pushed to master. > Should the inline function implGetDayMonthYear be moved too? if it's only used in the same module, that's not a big deal I think; it's the cross-module header avoidance hacks I wanted to cleanup. Thanks muchly ! :-) are you interested in a juicier bigger hack by any chance ? :-) I have a number of un-filed fun pet hacks here if you want to drop me a mail ;-) or is there some area that particularly interests you ?
Jack Leigh committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=af4df7ac089134df888ada3cd36b27a0b62babab fdo#48257 collect function prototypes from basic/ into single header file The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Migrating Whiteboard tags to Keywords: (EasyHack,DifficultyBeginner,SkillCpp,TopicCleanup) [NinjaEdit]