fdo#48257 collect function prototypes from basic/ into single header file

Change-Id: I1666e64b2b611054e1a713a76575e2f06781f80a